
Package: PSCBS
==============

Version: 0.16.0 [2011-11-12]
o Added callROH().
o Added arguments 'from' and 'adjustFor' to updateMeans().


Version: 0.15.5 [2011-11-04]
o BUG FIX: extractSegment() for AbstractCBS would give an error,
  because it called itself instead of extractSegments().


Version: 0.15.4 [2011-10-30]
o Added save() and load() methods to AbstractCBS, which are wrappers
  for saveObject() and loadObject() that assert the correct class
  structure.  Also, the load() method will automatically update the
  class hierarchy for CBS and PairedPSCBS objects that were saved
  before adding class AbstractCBS.


Version: 0.15.3 [2011-10-23]
o BUG FIX: callAmplifications() for CBS generated an error, if
  more than one chromosome were called.
o BUG FIX: The length of a segment must be defined as 'end-start' 
  and not 'end-start+1' so that the the total length of all segments
  adds up correctly.
o BUG FIX: highlightArmCalls() for CBS did not handle empty chromosomes.
o BUG FIX: getCallStatisticsByArms() for CBS would thrown a error if
  argument 'genomeData' did not contain exactly the same chromosomes
  as in the CBS object.


Version: 0.15.2 [2011-10-21]
o Added mergeThreeSegments() to AbstractCBS.
o BUG FIX: Recent updates caused segmentByPairedPSCBS(data) not to
  work when 'data' is a data frame.


Version: 0.15.1 [2011-10-21]
o By setting 'start' and 'end' to NAs in 'knownSegments' (chromosome must
  still be specified), it is possible to insert an empty segment that
  disconnects the two flanking segments, e.g. centromere and the two arms.


Version: 0.15.0 [2011-10-20]
o Added support for specifying priorly known segments, such as chromosome
  arms and centromeres, in segmentByCBS() via argument 'knownSegments'.
o CLEANUP: Dropped a stray debug output message in segmentByPairedPSCBS().


Version: 0.14.3 [2011-10-17]
o Added argument 'asMissing' to dropRegions() for AbstractCBS.


Version: 0.14.2 [2011-10-16]