@@ -56,6 +56,13 @@ setMethodS3("callROH", "PairedPSCBS", function(fit, ..., force=FALSE, verbose=FA
     segs <- cbind(segs, rohCall=calls);
   }
 
+
+  # testROH() uses matrixStats::rowMins(), iff calculating genotype
+  # confidence scores.  It is cheaper to load 'matrixStats' once,
+  # instead in every call to testROH().
+  require("matrixStats") || throw("Package not loaded: matrixStats");
+
+
   # For each segment...
   for (ss in seq(length=nbrOfSegments)) {
     verbose && enter(verbose, sprintf("Segment #%d of %d", ss, nbrOfSegments));
